<resources>
    <string name="app_name">Equalizer</string>
    <string name="base_name">BASE</string>
    <string name="target_name">TARGET</string>
    <string name="apply_btn_name">APPLY</string>

    <string name="frequency1">60Hz</string>
    <string name="frequency2">230Hz</string>
    <string name="frequency3">910Hz</string>
    <string name="frequency4">3.6kHz</string>

    <string name="action_new">New Earphone</string>
    <string name="action_community">Community</string>
</resources>
