<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.equalizer.hyosori.equalizer.view.SetterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="56dp"
        android:id="@+id/toolbarLayout"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.v7.widget.Toolbar
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            tools:layout_editor_absoluteY="144dp"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/toolbar"
            tools:ignore="MissingConstraints" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/contentLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerLayout"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:text="@string/base_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_text1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/spinner1"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginTop="8dp"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_text1"
                android:entries="@array/preset"
                app:layout_constraintVertical_bias="0.52" />

            <TextView
                android:text="@string/target_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_text2"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginTop="32dp"
                app:layout_constraintRight_toRightOf="@+id/spinner_text1"
                app:layout_constraintLeft_toLeftOf="@+id/spinner_text1"
                app:layout_constraintTop_toBottomOf="@+id/spinner1"
                tools:layout_constraintLeft_creator="1" />

            <Spinner
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/spinner2"
                tools:layout_constraintTop_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginTop="8dp"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintRight_toRightOf="@+id/spinner1"
                app:layout_constraintLeft_toLeftOf="@+id/spinner1"
                app:layout_constraintTop_toBottomOf="@+id/spinner_text2"
                android:entries="@array/preset" />

            <Button
                android:text="@string/apply_btn_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_apply"
                android:onClick="onApplyBtnClicked"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintHorizontal_bias="0.46"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerLayout"
            app:layout_constraintRight_toRightOf="@+id/spinnerLayout"
            app:layout_constraintTop_toBottomOf="@+id/spinnerLayout"
            android:id="@+id/detailSettingLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar_text1"
                android:text="@string/frequency1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/seekBar1"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp" />

            <TextView
                android:text="@string/frequency4"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:id="@+id/seekBar_text4"
                app:layout_constraintTop_toTopOf="@+id/seekBar4"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar_text1" />

            <TextView
                android:text="@string/frequency2"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:id="@+id/seekBar_text2"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar_text1"
                app:layout_constraintTop_toTopOf="@+id/seekBar2"
                android:layout_marginTop="8dp" />

            <TextView
                android:text="@string/frequency3"
                android:layout_width="58dp"
                android:layout_height="17dp"
                android:id="@+id/seekBar_text3"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar_text1"
                app:layout_constraintTop_toTopOf="@+id/seekBar3"
                android:layout_marginTop="8dp" />

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar4"
                android:tag="3600"
                android:max="3000"
                android:progress="1500"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="@+id/seekBar3"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar3"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar3"
                android:tag="910"
                android:max="3000"
                android:progress="1500"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="@+id/seekBar2"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar2"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar2"
                android:tag="230"
                android:max="3000"
                android:progress="1500"
                tools:layout_constraintRight_creator="1"
                app:layout_constraintRight_toRightOf="@+id/seekBar1"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toLeftOf="@+id/seekBar1"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar1" />

            <SeekBar
                android:layout_height="wrap_content"
                android:id="@+id/seekBar1"
                android:tag="60"
                android:max="3000"
                android:progress="1500"
                tools:layout_constraintRight_creator="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_constraintLeft_creator="1"
                app:layout_constraintLeft_toRightOf="@+id/seekBar_text1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
